# HTM

./: .gitignore  CMakeLists.txt  LICENSE.TXT  build
core/: CMakeLists.txt  Common.cpp  Common.h  Introspection.cpp  Introspection.h  Layer.cpp  Layer.h  Node.cpp  Node.h  Space.cpp  Space.h  SpatialPooler.cpp  SpatialPooler.h  TemporalPooler.cpp  TemporalPooler.h  main.cpp  tags
core/origin/: SpaceOrigin.cpp  SpaceOrigin.h
test/: CMakeLists.txt  README  testConclude.cpp  testCpSubSpace.cpp  testCpSubSpace2.cpp  testSpLearn.cpp  testSpTableView.cpp  testTpInference.cpp  testTpSort.cpp
utility/: CMakeLists.txt  README  image_sequence.cpp  image_sequence_extended.cpp
